# stdexec-playground

./: .gitignore  .tasks  CMakeLists.txt  acceleration.hpp  algorithms.hpp  cpu_test.cpp  cuda_helpers.cuh  demo_algorithms.cpp  demo_algorithms_sync.cpp  demo_matrix_sweep.cpp  demo_openmp.cpp  demo_stdpar.cpp  execution.hpp  gpu_test.cpp  hello_cpu.cpp  hello_gpu.cpp  if_then_else.cpp  indices.hpp  main.cpp  playground.cpp  span2d.hpp  storage.hpp  test_algorithms.cpp  timer.hpp  vecmath.hpp
